# AI-Azure-Well-Architected-Review-Assistant

./: .env.example  .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  middleware.py  responses.py
backend/app/api/v1/: auth.py  chat.py  health.py  knowledge.py  projects.py  reviews.py  router.py  tenants.py  uploads.py
backend/app/application/: __init__.py
backend/app/application/dto/: __init__.py  chat.py  common.py  identity.py  knowledge.py  projects.py  reviews.py  tenants.py  uploads.py
backend/app/application/ports/: blob_storage.py  project_repository.py  rag.py  review_model.py  unit_of_work.py
backend/app/application/services/: architecture_review_service.py  authorization_service.py  chat_service.py  project_service.py  rag_ingestion_service.py  rag_retrieval_service.py  review_service.py  tenant_service.py  upload_service.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py  telemetry.py
backend/app/domain/common/: __init__.py  context.py
backend/app/domain/projects/: __init__.py  models.py
backend/app/domain/uploads/: __init__.py
backend/app/infrastructure/azure_openai/: embeddings.py  review_model.py
backend/app/infrastructure/azure_search/: __init__.py  index_schema.py  knowledge_index.py
backend/app/infrastructure/blob_storage/: __init__.py  document_store.py
backend/app/infrastructure/db/: models.py  session.py  unit_of_work.py
backend/app/rag/: __init__.py  models.py
backend/app/review_engine/: __init__.py  orchestrator.py
backend/app/workers/: bootstrap.py
frontend/: .env.example  (+5 more)
(+66 files in other folders)
