[project]
name = "ai-azure-waf-review-backend"
version = "0.1.0"
description = "FastAPI backend for AI Azure Well-Architected Review Assistant"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "SQLAlchemy[asyncio]>=2.0.0,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "alembic>=1.13.0,<2.0.0",
  "PyJWT[crypto]>=2.8.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "orjson>=3.10.0,<4.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "redis>=5.0.0,<6.0.0",
  "tenacity>=8.4.0,<10.0.0",
  "opentelemetry-api>=1.25.0,<2.0.0",
  "opentelemetry-sdk>=1.25.0,<2.0.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0,<1.0.0",
  "azure-identity>=1.17.0,<2.0.0",
  "azure-storage-blob>=12.20.0,<13.0.0",
  "azure-search-documents>=11.6.0,<12.0.0",
  "azure-servicebus>=7.12.0,<8.0.0",
  "openai>=1.40.0,<2.0.0",
  "langchain>=0.2.17,<0.4.0",
  "langchain-openai>=0.1.23,<0.4.0",
  "langchain-community>=0.2.17,<0.4.0",
  "langchain-text-splitters>=0.2.4,<0.4.0",
  "pypdf>=4.3.0,<6.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "ruff>=0.5.0,<1.0.0",
  "mypy>=1.10.0,<2.0.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
